fixup! bugfix auto width tool bar on small window width

--- a/shkc/static/tass.css
+++ b/shkc/static/tass.css
@@ -570,7 +570,7 @@ input#startDate {
     font-size: 16px;
     padding-bottom: 1px;
     text-align: center;
-    /* white-space: nowrap; */
+    white-space: nowrap;
     border-left: 3px solid;
     padding-right: 3px;
 }
